this is one of the commits

--- a/1.html
+++ b/1.html
@@ -5,15 +5,23 @@
 
 <style type="text/css">
 	.head{
+		font-size: 40px;
 		color: blue;
 	}
-	.para{
-		font-size: 30px;
-		font-family: sans-serif,monospace;
+	.border{
+		border-color: blue;
+		background-size: 2px;
 	}
 	.para2{
 		font-size: 30px;
+		font-family: sans-serif,monospace;
+	}
+	.para22{
+		font-size: 30px;
 		color: blue;
+	}
+	.parpa{
+		.color: orange;
 	}
 </style>
 
@@ -22,8 +30,9 @@
 <body>
 
 <h3 class="head">yuvraj singh</h3>
-<p class="para">Now this is the first paragraph that we are using</p>
-<p class="para2"> Studying from here will help us to get somewhere where we wanna reach </p>
+<p class="para2">Now this is the first paragraph that we are using</p>
+<p class="para22"> Studying from here will help us to get somewhere where we wanna reach </p>
+<p class="parpa"> this is added on the third push</p>
 
 </body>
 
