third commit with inline function

--- a/1.html
+++ b/1.html
@@ -29,7 +29,7 @@
 
 <body>
 
-<h3 class="head">yuvraj singh</h3>
+<h3 class="head" style="color:green;">yuvraj singh</h3>
 <p class="para2">Now this is the first paragraph that we are using</p>
 <p class="para22"> Studying from here will help us to get somewhere where we wanna reach </p>
 <p class="parpa"> this is added on the third push</p>
